--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 _build/
 elixir_scope_sample_apps/plain_elixir_sample_app/_build/
 elixir_scope_sample_apps/phoenix_sample_app/_build/
-
+XXXX/
 
 cover/
 deps/
